# freecad-plugin

./: README.md
freecad-mcp/: .env.example  .gitignore  CLAUDE.md  Cargo.toml  MISTAKES.md  Makefile  TASKS.md  claude_desktop_config.json
freecad-mcp/src/: config.rs  error.rs  lib.rs  main.rs  mcp_server.rs
freecad-mcp/src/bridge/: mod.rs  runner.rs  session.rs
freecad-mcp/src/scripts/: mod.rs
freecad-mcp/src/tools/: export.rs  measure.rs  mod.rs  operations.rs  placement.rs  primitives.rs  query.rs  sketcher.rs
freecad-mcp/tests/: integration_export.rs  integration_operations.rs  integration_primitives.rs  integration_query.rs
freecad-ui/: .env.local.example  next.config.ts  package-lock.json  package.json
freecad-ui/app/: layout.tsx  page.tsx
freecad-ui/app/api/chat/: route.ts
freecad-ui/components/: chat.tsx  model-selector.tsx
freecad-ui/lib/: providers.ts
