[package]
name = "freecad-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
rmcp               = { version = "0.1", features = ["server", "transport-io", "macros"] }
schemars           = { version = "0.8", features = ["derive"] }
tokio              = { version = "1", features = ["full"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
anyhow             = "1"
thiserror          = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile           = "3"
which              = "6"

[dev-dependencies]
mockall    = "0.12"
tokio-test = "0.4"
